cabal-version:      2.4
name:               fios
version:            0.1.0.0
license:            MIT
copyright:          2022 Sridhar Ratnakumar
maintainer:         srid@srid.ca
author:             Sridhar Ratnakumar
category:           Web

-- TODO: Before hackage release.
-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

extra-source-files:
  LICENSE
  README.md

common shared
  ghc-options:
    -Wall -Wincomplete-record-updates -Wincomplete-uni-patterns
    -Wmissing-deriving-strategies -Wunused-foralls -Wunused-foralls
    -fprint-explicit-foralls -fprint-explicit-kinds

  mixins:
    base hiding (Prelude),
    relude (Relude as Prelude, Relude.Container.One),
    relude

  default-extensions:
    NoStarIsType
    BangPatterns
    ConstraintKinds
    DataKinds
    DeriveAnyClass
    DeriveDataTypeable
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    DerivingStrategies
    DerivingVia
    EmptyCase
    EmptyDataDecls
    EmptyDataDeriving
    ExistentialQuantification
    ExplicitForAll
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GADTSyntax
    GeneralisedNewtypeDeriving
    ImportQualifiedPost
    InstanceSigs
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    MultiWayIf
    NumericUnderscores
    OverloadedStrings
    PolyKinds
    PostfixOperators
    RankNTypes
    RecursiveDo
    ScopedTypeVariables
    StandaloneDeriving
    StandaloneKindSignatures
    TemplateHaskell
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
    ViewPatterns

  build-depends:
    , aeson
    , async
    , base          >=4.13.0.0 && <4.18.0.0.0
    , data-default
    , directory
    , either 
    , Earley
    , filepath
    , hashable      ==1.4.2.0
    , haskeline
    , megaparsec    ==9.2.2
    , mtl
    , optics-core
    , profunctors
    , relude        >=1.0
    , shower
    , split
    , template-haskell
    , time
    , these == 1.2
    , with-utf8

  hs-source-dirs:     src
  default-language:   Haskell2010

library
  import:          shared
  exposed-modules:
    HauntedHouse.Build.Default
    HauntedHouse.Build.Descriptives
    HauntedHouse.Build.DescriptiveTemplate
    HauntedHouse.Build.DirectionTemplate
    HauntedHouse.Build.Exits
    HauntedHouse.Build.ExitTemplate
    HauntedHouse.Build.GameState
    HauntedHouse.Build.LocationLabels
    HauntedHouse.Build.Locations
    HauntedHouse.Build.Locations.BuildFrame
    HauntedHouse.Build.Locations.Hall
    HauntedHouse.Build.Locations.Kitchen
    HauntedHouse.Build.Locations.Kitchen.Exits
    HauntedHouse.Build.Locations.Kitchen.Floor
    HauntedHouse.Build.Locations.Kitchen.ShelfArea.Shelf
    HauntedHouse.Build.Locations.Kitchen.ShelfArea.Cabinets.BelowShelf
    HauntedHouse.Build.Locations.Kitchen.ShelfArea.Cabinets.AboveShelf
    HauntedHouse.Build.Locations.Kitchen.SinkArea.Cabinets.AboveSink
    HauntedHouse.Build.Locations.Kitchen.SinkArea.Cabinets.BelowSink
    HauntedHouse.Build.Locations.Kitchen.SinkArea.Sink
    HauntedHouse.Build.LocationTemplate
    HauntedHouse.Build.ObjectLabels
    HauntedHouse.Build.ObjectTemplate
    HauntedHouse.Build.Template
    HauntedHouse.Clarifier
    HauntedHouse.Game.Exit
    HauntedHouse.Game.Engine
    HauntedHouse.Game.Model.GID
    HauntedHouse.Game.Narration
    HauntedHouse.Game.Object
    HauntedHouse.Game.Player
    HauntedHouse.Game.Scene
    HauntedHouse.Game.World
    HauntedHouse.Recognizer
    HauntedHouse.Tokenizer
    HauntedHouse.TopLevel
    
  other-modules:
    HauntedHouse.Game.Actions.Close
    HauntedHouse.Game.Actions.Open
    HauntedHouse.Game.Actions.Get
    HauntedHouse.Build.Locations.Kitchen.PlantPot
    HauntedHouse.Game.Engine.OnlyVerb
    HauntedHouse.Game.Engine.OnlyVerb.DoLook
    HauntedHouse.Game.Engine.OnlyVerb.DoGo
    HauntedHouse.Game.Engine.VerbPhraseOneEvaluator
    HauntedHouse.Game.Engine.VerbPhraseThree 
    HauntedHouse.Game.Engine.VerbPhraseThree.Look
    HauntedHouse.Game.Engine.VerbPhraseTwo
    HauntedHouse.Game.Engine.VerbPhraseTwoEvaluator.Look
    HauntedHouse.Game.Engine.VerbPhraseFive
    HauntedHouse.Game.Engine.VerbPhraseSeven
    HauntedHouse.Game.Engine.VerbPhraseSeven.Close
    HauntedHouse.Game.Engine.VerbPhraseSeven.Open
    HauntedHouse.Game.Engine.Verification
    HauntedHouse.Game.Engine.Utilities
    HauntedHouse.Game.Model.Condition
    HauntedHouse.Game.Model.Display
    HauntedHouse.Game.Model.Mapping
    HauntedHouse.Game.Model.Object.Relation
    HauntedHouse.Game.Model.World
    HauntedHouse.Recognizer.WordClasses
    HauntedHouse.Tokenizer.Data
executable fios
  import:  shared
  main-is: Main.hs
