cabal-version:      2.4
name:               fios
version:            0.1.0.0
license:            MIT
copyright:          2022 Sridhar Ratnakumar
maintainer:         srid@srid.ca
author:             Sridhar Ratnakumar
category:           Web

-- TODO: Before hackage release.
-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

extra-source-files:
  LICENSE
  README.md

common shared
  ghc-options:
    -Wall -Wincomplete-record-updates -Wincomplete-uni-patterns
    -Wmissing-deriving-strategies -Wunused-foralls -Wunused-foralls
    -fprint-explicit-foralls -fprint-explicit-kinds

  mixins:
    base hiding (Prelude),
    relude (Relude as Prelude, Relude.Container.One),
    relude

  default-extensions:
    NoStarIsType
    BangPatterns
    ConstraintKinds
    DataKinds
    DeriveDataTypeable
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    DerivingStrategies
    DerivingVia
    EmptyCase
    EmptyDataDecls
    EmptyDataDeriving
    ExistentialQuantification
    ExplicitForAll
    FlexibleContexts
    FlexibleInstances
    GADTSyntax
    GeneralisedNewtypeDeriving
    ImportQualifiedPost
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    MultiWayIf
    NumericUnderscores
    OverloadedStrings
    PolyKinds
    PostfixOperators
    RankNTypes
    ScopedTypeVariables
    StandaloneDeriving
    StandaloneKindSignatures
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
    ViewPatterns

  build-depends:
    , aeson
    , async
    , base          >=4.13.0.0 && <4.18.0.0.0
    , containers    == 0.6.5.1
    , data-default
    , directory
    , filepath
    , first-class-families
    , mtl
    , vector == 0.12.3.1
    , ghc-prim == 0.8.0
    , optics-core
    , profunctors
    , relude        >=1.0
    , shower
    , time
    , with-utf8

  hs-source-dirs:     src
  default-language:   Haskell2010

library
  import:          shared
  exposed-modules:
    Types.ChapterOne
    Types.ChapterThree
    Types.ChapterFive
    Types.ChapterEight
    Types.ChapterNine
    Types.ChapterTen
    Types.ChapterEleven
    Types.ChapterElevenThree

executable fios
  import:  shared
  main-is: Main.hs
