cabal-version:      2.4
name:               fios
version:            0.1.0.0
license:            MIT
copyright:          2022 Sridhar Ratnakumar
maintainer:         srid@srid.ca
author:             Sridhar Ratnakumar
category:           Web

-- TODO: Before hackage release.
-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

extra-source-files:
  LICENSE
  README.md

common shared
  ghc-options:
    -Wall -Wincomplete-record-updates -Wincomplete-uni-patterns
    -Wmissing-deriving-strategies -Wunused-foralls -Wunused-foralls
    -fprint-explicit-foralls -fprint-explicit-kinds

  mixins:
    base hiding (Prelude),
    relude (Relude as Prelude, Relude.Container.One),
    relude

  default-extensions:
    NoStarIsType
    BangPatterns
    ConstraintKinds
    DataKinds
    DeriveAnyClass
    DeriveDataTypeable
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    DerivingStrategies
    DerivingVia
    DuplicateRecordFields
    EmptyCase
    EmptyDataDecls
    EmptyDataDeriving
    ExistentialQuantification
    ExplicitForAll
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GADTSyntax
    GeneralisedNewtypeDeriving
    ImportQualifiedPost
    InstanceSigs
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    RecordWildCards
    MultiWayIf
    NumericUnderscores
    OverloadedRecordDot
    OverloadedStrings
    PolyKinds
    PostfixOperators
    RankNTypes
    RecursiveDo
    ScopedTypeVariables
    StandaloneDeriving
    StandaloneKindSignatures
    TemplateHaskell
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
    ViewPatterns

  build-depends:
    , aeson
    , async
    , base          >=4.13.0.0 && <4.18.0.0.0
    , data-default
    , directory
    , either 
    , Earley
    , filepath
    , hashable      ==1.4.2.0
    , haskeline
    , megaparsec    ==9.2.2
    , mtl
    , optics-core
    , profunctors
    , relude        >=1.0
    , shower
    , split
    , template-haskell
    , time
    , these == 1.2
    , with-utf8

  hs-source-dirs:     src
  default-language:   Haskell2010

library
  import:          shared
  exposed-modules:
    Build.Default
    Build.Descriptives
    Build.DescriptiveTemplate
    Build.DirectionTemplate
    Build.Exits
    Build.ExitTemplate
    Build.GameState
    Build.LocationLabels
    Build.Locations
    Build.Locations.BuildFrame
    Build.Locations.Hall
    Build.Locations.Kitchen
    Build.Locations.Kitchen.Bag
    Build.Locations.Kitchen.Exits
    Build.Locations.Kitchen.Exits.EastExit.Door.Actions.NoCanDo
    Build.Locations.Kitchen.Exits.EastExit.Door.Actions.Close
    Build.Locations.Kitchen.Exits.EastExit.Door.Actions.Look
    Build.Locations.Kitchen.Exits.EastExit.Door.Actions.Open
    Build.Locations.Kitchen.Exits.EastExit.Door.MakeDoor
    Build.Locations.Kitchen.Exits.EastExit.Portal.MakePortal
    Build.Locations.Kitchen.Exits.EastExit.Portal.Actions.Go
    Build.Locations.Kitchen.Exits.EastExit.Portal.Actions.Look
    Build.Locations.Kitchen.Exits.EastExit.Portal.Actions.NoCanDo
    Build.Locations.Kitchen.FloorArea.Actions.Floor.Get
    Build.Locations.Kitchen.FloorArea.Actions.Floor.Look
    Build.Locations.Kitchen.FloorArea.Actions.Floor.NoCanDo
    Build.Locations.Kitchen.FloorArea.Actions.Floor.Put
    Build.Locations.Kitchen.FloorArea.Actions.PlantPot.Get
    Build.Locations.Kitchen.FloorArea.Actions.PlantPot.Look
    Build.Locations.Kitchen.FloorArea.Actions.PlantPot.NoCanDo
    Build.Locations.Kitchen.FloorArea.Actions.PlantPot.Put
    Build.Locations.Kitchen.FloorArea.Floor 
    Build.Locations.Kitchen.FloorArea.PlantPot
    Build.Locations.Kitchen.ShelfArea.Shelf
    Build.Locations.Kitchen.ShelfArea.Actions.Look
    Build.Locations.Kitchen.ShelfArea.Actions.NoCanDo
    Build.Locations.Kitchen.ShelfArea.Actions.Put
    Build.Locations.Kitchen.ShelfArea.Cabinets.AboveShelf.Actions.Close
    Build.Locations.Kitchen.ShelfArea.Cabinets.AboveShelf.Actions.Look
    Build.Locations.Kitchen.ShelfArea.Cabinets.AboveShelf.Actions.NoCanDo
    Build.Locations.Kitchen.ShelfArea.Cabinets.AboveShelf.Actions.Open
    Build.Locations.Kitchen.ShelfArea.Cabinets.AboveShelf.Actions.Put
    Build.Locations.Kitchen.ShelfArea.Cabinets.AboveShelf.Cabinet
    Build.Locations.Kitchen.ShelfArea.Cabinets.BelowShelf.Cabinet
    Build.Locations.Kitchen.ShelfArea.Cabinets.BelowShelf.Actions.Get
    Build.Locations.Kitchen.ShelfArea.Cabinets.BelowShelf.Actions.Look
    Build.Locations.Kitchen.ShelfArea.Cabinets.BelowShelf.Actions.NoCanDo
    Build.Locations.Kitchen.ShelfArea.Cabinets.BelowShelf.Actions.Put
    Build.Locations.Kitchen.SinkArea.Actions.Close
    Build.Locations.Kitchen.SinkArea.Actions.Look
    Build.Locations.Kitchen.SinkArea.Actions.NoCanDo
    Build.Locations.Kitchen.SinkArea.Actions.Open
    Build.Locations.Kitchen.SinkArea.Actions.Put
    Build.Locations.Kitchen.SinkArea.Cabinets.AboveSink.Actions.Close
    Build.Locations.Kitchen.SinkArea.Cabinets.AboveSink.Actions.Open
    Build.Locations.Kitchen.SinkArea.Cabinets.AboveSink.Actions.Look
    Build.Locations.Kitchen.SinkArea.Cabinets.AboveSink.Actions.NoCanDo
    Build.Locations.Kitchen.SinkArea.Cabinets.AboveSink.Actions.Put
    Build.Locations.Kitchen.SinkArea.Cabinets.AboveSink.Cabinet
    Build.Locations.Kitchen.SinkArea.Cabinets.BelowSink.Actions.Close
    Build.Locations.Kitchen.SinkArea.Cabinets.BelowSink.Actions.Look
    Build.Locations.Kitchen.SinkArea.Cabinets.BelowSink.Actions.NoCanDo
    Build.Locations.Kitchen.SinkArea.Cabinets.BelowSink.Actions.Open 
    Build.Locations.Kitchen.SinkArea.Cabinets.BelowSink.Actions.Put
    Build.Locations.Kitchen.SinkArea.Cabinets.BelowSink.Cabinet
    Build.Locations.Kitchen.SinkArea.Sink
    Build.LocationTemplate
    Build.ObjectLabels
    Build.ObjectTemplate
    Build.Template
    Clarifier
    Game.Exit
    Game.Engine
    Game.Model.GID
    Game.Narration
    Game.Object
    Game.Player
    Game.Scene
    Game.World
    Recognizer
    Tokenizer
    TopLevel
    
  other-modules:
    Game.Actions.Close
    Game.Actions.Get
    Game.Actions.Look.StandardLook
    Game.Actions.Look.Update
    Game.Actions.Open
    Game.Engine.OnlyVerb
    Game.Engine.OnlyVerb.DoLook
    Game.Engine.OnlyVerb.DoGo
    Game.Engine.Verbs.Look
    Game.Engine.VerbPhraseOneEvaluator
    Game.Engine.VerbPhraseOneEvaluator.Get
    Game.Engine.VerbPhraseThree 
    Game.Engine.VerbPhraseThree.Look
    Game.Engine.VerbPhraseTwo
    Game.Engine.VerbPhraseTwoEvaluator.Look
    Game.Engine.VerbPhraseFive
    Game.Engine.VerbPhraseSeven
    Game.Engine.VerbPhraseSeven.Close
    Game.Engine.VerbPhraseSeven.Open
    Game.Engine.Verification
    Game.Engine.Utilities
    Game.Model.Condition
    Game.Model.Display
    Game.Model.Mapping
    Game.Model.World
    Recognizer.WordClasses
    Tokenizer.Data
executable fios
  import:  shared
  main-is: Main.hs
